test/should_not_compile/syntax_expression_row_label.sml
print (Int.toString (#x { x = 123, x = 456 }));
